# libtriton_jit

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  binary_add.py  call_func.cpp  example.cpp  func.h  jit_utils.cpp  jit_utils.h  setup.py  standalone_compile.py  tensor_add.cu  test_triton_add.cpp  test_triton_jit.cpp  test_triton_sum.cpp  triton_example.cpp  triton_example_jit.cpp  triton_jit_function.cpp  triton_jit_function.h  triton_kernel.cpp  triton_kernel.h
cmake/: Config.cmake.in  Dependencies.cmake  FindTorch.cmake  Options.cmake
ctests/: CMakeLists.txt  test_triton_add.cpp
examples/: CMakeLists.txt  test_triton_add.py
examples/arg_handle/: CMakeLists.txt  axpy.py  axpy_op.cpp  axpy_op.h  test_axpy.cpp
examples/pointwise/: CMakeLists.txt  README.md  add.py  add_op.cpp  add_triton_cpp_rt.py  test_add.cpp
examples/pointwise_raw/: CMakeLists.txt  add.py  add_op.cpp  add_op.h  test_add.cpp
examples/reduce/: CMakeLists.txt  sum.py  sum_compile.py  sum_op.cpp  sum_op.h  sum_triton_cpp_rt.py  test_sum.cpp
include/jit/: jit_utils.h  triton_jit_function.h  triton_kernel.h
include/operators/: operators.h
include/triton_jit/: jit_utils.h  triton_jit_function.h  triton_kernel.h
jit/: CMakeLists.txt  jit_utils.cpp  jit_utils.h  triton_jit_function.cpp  triton_jit_function.h  triton_kernel.cpp  triton_kernel.h
lib/: CMakeLists.txt
lib/jit/: CMakeLists.txt  jit_utils.cpp  triton_jit_function.cpp  triton_kernel.cpp
lib/operators/: CMakeLists.txt  add.cpp  operators.cpp  sum.cpp
operators/: CMakeLists.txt  add.cpp  operators.h  sum.cpp
python/flaggems/csrc/: cstub.cpp
scripts/: gen_ssig.py  pointwise_dynamic.py  standalone_compile.py
src/: CMakeLists.txt  jit_utils.cpp  triton_jit_function.cpp  triton_kernel.cpp
tests/: CMakeLists.txt  test_triton_add.cpp  test_triton_sum.cpp
tools/: gen_jit.py  gen_spec.py  python_utils.py
triton_src/: axpy.py  binary_add.py  binary_add_stride.py  sum.py
